# wasip2

./: Cargo.toml  README.md  main.py  optimize.sh  pyproject.toml  ww.wasm
.cargo/: config.toml
adder_wasm/: Cargo.toml
adder_wasm/src/: lib.rs
host_adder/: Cargo.toml
host_adder/src/: lib.rs
host_adder/wit/: adder.wit
src/: lib.rs
wit/: adder.wit
