[package]
name = "ww"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wasmtime = "32.0.0"
# wasmtime-wasi = "32.0.0"
wit-bindgen = "0.41.0"

anyhow = "1.0"
wasmtime = "32.0"
wasmtime-wasi = "32.0"
futures = { version = "0.3", features = ["executor"] }
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce parallel codegen for smaller size
panic = "abort"   # Avoid unwind code
strip = true      # Strip debug info and symbols
